# YggdrasilServer

./: CMakeLists.txt  README.md  config.json  main.cc
app/: Error.cpp  Token.cpp  TokenDicionary.cpp  User.cpp  Utility.cpp  token.cpp
controllers/: Authserver.cc  Authserver.h  authserver.cc  authserver.h
entitymodel/: User.h
libs/sole/: sole.hpp
mcmodel/: Authservermodel.h  Error.h  Model.h  Modelimplement.h  Token.h  TokenDictionary.h  TokenRemote.h  UserImplement.h  authservermodel.h  modelimplement.h  token.h
models/: model.json
public/: index.html
public/assets/css/: MainStyle.css
test/: CMakeLists.txt
user/: Player.h  Texture.h  Token.h  User.h
utility/: PlayerUtility.h  SafeUtility.h  UserUtility.h  Utility.h
